Added remote syslog server logging example and library (as submodule)

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "libraries/SD"]
 	path = libraries/SD
 	url = https://github.com/arduino-libraries/SD.git
+[submodule "libraries/Syslog"]
+	path = libraries/Syslog
+	url = https://github.com/arcao/Syslog.git
