--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "libraries/arduino-mqtt"]
 	path = libraries/arduino-mqtt
 	url = https://github.com/256dpi/arduino-mqtt.git
+[submodule "libraries/Timer"]
+	path = libraries/Timer
+	url = https://github.com/JChristensen/Timer.git
