Add capactive sensor example

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "libraries/Ethernet"]
 	path = libraries/Ethernet
 	url = https://github.com/arduino-libraries/Ethernet
+[submodule "libraries/CapacitiveSensor"]
+	path = libraries/CapacitiveSensor
+	url = https://github.com/PaulStoffregen/CapacitiveSensor.git
