--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "libraries/Adafruit_TSL2561"]
 	path = libraries/Adafruit_TSL2561
 	url = https://github.com/adafruit/Adafruit_TSL2561.git
+[submodule "libraries/Adafruit_CCS811"]
+	path = libraries/Adafruit_CCS811
+	url = https://github.com/adafruit/Adafruit_CCS811
