--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "libraries/Adafruit_BME280_Library"]
 	path = libraries/Adafruit_BME280_Library
 	url = https://github.com/adafruit/Adafruit_BME280_Library.git
-[submodule "libraries/Adafruit_CircuitPlayground"]
-	path = libraries/Adafruit_CircuitPlayground
-	url = https://github.com/adafruit/Adafruit_CircuitPlayground.git
 [submodule "libraries/Adafruit_Sensor"]
 	path = libraries/Adafruit_Sensor
 	url = https://github.com/adafruit/Adafruit_Sensor.git
@@ -13,9 +10,6 @@
 [submodule "libraries/FlowMeter"]
 	path = libraries/FlowMeter
 	url = https://github.com/sekdiy/FlowMeter.git
-[submodule "libraries/esp8266-oled-ssd1306"]
-	path = libraries/esp8266-oled-ssd1306
-	url = https://github.com/ThingPulse/esp8266-oled-ssd1306.git
 [submodule "libraries/Adafruit_BMP280_Library"]
 	path = libraries/Adafruit_BMP280_Library
 	url = https://github.com/adafruit/Adafruit_BMP280_Library
@@ -40,9 +34,6 @@
 [submodule "libraries/arduino-mqtt"]
 	path = libraries/arduino-mqtt
 	url = https://github.com/256dpi/arduino-mqtt.git
-[submodule "libraries/Timer"]
-	path = libraries/Timer
-	url = https://github.com/JChristensen/Timer.git
 [submodule "libraries/Adafruit_NeoPixel"]
 	path = libraries/Adafruit_NeoPixel
 	url = https://github.com/adafruit/Adafruit_NeoPixel.git
@@ -67,3 +58,33 @@
 [submodule "libraries/Arduino-Temperature-Control-Library"]
 	path = libraries/Arduino-Temperature-Control-Library
 	url = https://github.com/milesburton/Arduino-Temperature-Control-Library
+[submodule "libraries/pubsubclient"]
+	path = libraries/pubsubclient
+	url = https://github.com/knolleary/pubsubclient.git
+[submodule "libraries/ArduinoJson"]
+	path = libraries/ArduinoJson
+	url = https://github.com/bblanchon/ArduinoJson.git
+[submodule "libraries/TimerNew"]
+	path = libraries/TimerNew
+	url = https://github.com/brunocalou/Timer.git
+[submodule "libraries/Arduino-PID-Library"]
+	path = libraries/Arduino-PID-Library
+	url = https://github.com/br3ttb/Arduino-PID-Library.git
+[submodule "libraries/Arduino-PID-AutoTune-Library"]
+	path = libraries/Arduino-PID-AutoTune-Library
+	url = https://github.com/br3ttb/Arduino-PID-AutoTune-Library.git
+[submodule "libraries/Adafruit_SSD1306"]
+	path = libraries/Adafruit_SSD1306
+	url = https://github.com/adafruit/Adafruit_SSD1306.git
+[submodule "libraries/Adafruit_GFX_Library"]
+	path = libraries/Adafruit_GFX_Library
+	url = https://github.com/adafruit/Adafruit-GFX-Library.git
+[submodule "libraries/Adafruit_CircuitPlayground"]
+	path = libraries/Adafruit_CircuitPlayground
+	url = https://github.com/adafruit/Adafruit_CircuitPlayground.git
+[submodule "libraries/Adafruit_BusIO"]
+	path = libraries/Adafruit_BusIO
+	url = https://github.com/adafruit/Adafruit_BusIO.git
+[submodule "libraries/Adafruit_MAX31865_library"]
+	path = libraries/Adafruit_MAX31865_library
+	url = https://github.com/adafruit/Adafruit_MAX31865.git
