--- a/.gitmodules
+++ b/.gitmodules
@@ -49,9 +49,6 @@
 [submodule "libraries/Adafruit_TSL2561"]
 	path = libraries/Adafruit_TSL2561
 	url = https://github.com/adafruit/Adafruit_TSL2561.git
-[submodule "libraries/Adafruit_CCS811"]
-	path = libraries/Adafruit_CCS811
-	url = https://github.com/adafruit/Adafruit_CCS811
 [submodule "libraries/OneWire"]
 	path = libraries/OneWire
 	url = https://github.com/PaulStoffregen/OneWire
@@ -88,3 +85,6 @@
 [submodule "libraries/Adafruit_MAX31865_library"]
 	path = libraries/Adafruit_MAX31865_library
 	url = https://github.com/adafruit/Adafruit_MAX31865.git
+[submodule "libraries/Adafruit_CCS811_Library"]
+	path = libraries/Adafruit_CCS811_Library
+	url = https://github.com/adafruit/Adafruit_CCS811.git
